--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -41,18 +41,17 @@
     "from opentelemetry.sdk.trace.export import ConsoleSpanExporter, SimpleSpanProcessor\n",
     "from opentelemetry.trace import Status, StatusCode, set_tracer_provider\n",
     "\n",
-    "from openinference.instrumentation import using_attributes\n",
-    "from openinference.instrumentation.config import (\n",
-    "    # imagine these imports are different\n",
-    "    OpenInferenceTracerProvider,  # rename to TracerProvider\n",
+    "from openinference.instrumentation import (\n",
+    "    TracerProvider,\n",
     "    chain,\n",
-    "    get_current_openinference_span,  # rename to get_current_span\n",
+    "    get_current_span,\n",
     "    get_input_value_and_mime_type,\n",
-    "    get_openinference_span_kind,  # rename to get_span_kind\n",
     "    get_output_value_and_mime_type,\n",
+    "    get_span_kind,\n",
     "    get_tool_attributes,\n",
     "    suppress_tracing,\n",
     "    tool,\n",
+    "    using_attributes,\n",
     ")\n",
     "from openinference.semconv.resource import ResourceAttributes"
    ]
@@ -65,10 +64,10 @@
    "source": [
     "endpoint = \"http://127.0.0.1:6006/v1/traces\"\n",
     "resource = Resource(attributes={ResourceAttributes.PROJECT_NAME: \"openinference-tracer\"})\n",
-    "tracer_provider = OpenInferenceTracerProvider(resource=resource)\n",
+    "tracer_provider = TracerProvider(resource=resource)\n",
     "tracer_provider.add_span_processor(SimpleSpanProcessor(OTLPSpanExporter(endpoint)))\n",
     "tracer_provider.add_span_processor(SimpleSpanProcessor(ConsoleSpanExporter()))\n",
-    "# set_tracer_provider(tracer_provider)\n",
+    "set_tracer_provider(tracer_provider)\n",
     "tracer = tracer_provider.get_tracer(__name__)"
    ]
   },
@@ -130,7 +129,7 @@
     "with tracer.start_as_current_span(\n",
     "    \"chain-span-with-attribute-getters\",\n",
     "    attributes={\n",
-    "        **get_openinference_span_kind(\"chain\"),\n",
+    "        **get_span_kind(\"chain\"),\n",
     "        **get_input_value_and_mime_type(\"input\"),\n",
     "    },\n",
     ") as span:\n",
@@ -356,7 +355,7 @@
    "source": [
     "@chain\n",
     "def decorated_chain_with_input_and_output_set_inside_the_wrapped_function(input: str) -> str:\n",
-    "    span = get_current_openinference_span()\n",
+    "    span = get_current_span()\n",
     "    span.set_input(\"overridden-input\")\n",
     "    span.set_output(\"overridden-output\")\n",
     "    return \"output\"\n",
@@ -490,7 +489,6 @@
     "            name=\"tool-name\",\n",
     "            description=\"tool-description\",\n",
     "            parameters={\"input\": \"input\"},\n",
-    "            id=\"1234\",\n",
     "        )\n",
     "    )\n",
     "    span.set_status(Status(StatusCode.OK))"
@@ -502,7 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@tool(parameters=\"\")\n",
+    "@tool\n",
     "def decorated_tool(input1: str, input2: int) -> None:\n",
     "    \"\"\"\n",
     "    tool-description\n",
@@ -555,7 +553,7 @@
    "source": [
     "@tool\n",
     "def tool_with_changes_inside_the_wrapped_function(input1: str, input2: int) -> str:\n",
-    "    span = get_current_openinference_span()\n",
+    "    span = get_current_span()\n",
     "    print(type(span))\n",
     "    span.set_input(\"inside-input\")\n",
     "    span.set_output(\"inside-output\")\n",
