--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -14,7 +14,7 @@
     "from opentelemetry.exporter.otlp.proto.http.trace_exporter import OTLPSpanExporter\n",
     "from opentelemetry.sdk.resources import Resource\n",
     "from opentelemetry.sdk.trace.export import ConsoleSpanExporter, SimpleSpanProcessor\n",
-    "from opentelemetry.trace import Status, StatusCode, set_tracer_provider\n",
+    "from opentelemetry.trace import Status, StatusCode\n",
     "\n",
     "from openinference.instrumentation import (\n",
     "    TracerProvider,\n",
@@ -40,7 +40,6 @@
     "tracer_provider = TracerProvider(resource=resource)\n",
     "tracer_provider.add_span_processor(SimpleSpanProcessor(OTLPSpanExporter(endpoint)))\n",
     "tracer_provider.add_span_processor(SimpleSpanProcessor(ConsoleSpanExporter()))\n",
-    "set_tracer_provider(tracer_provider)\n",
     "tracer = tracer_provider.get_tracer(__name__)"
    ]
   },
