--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -416,6 +416,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Agents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Context Managers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tracer.start_as_current_span(\n",
+    "    \"agent-span-with-plain-text-io\",\n",
+    "    openinference_span_kind=\"agent\",\n",
+    ") as span:\n",
+    "    span.set_input(\"input\")\n",
+    "    span.set_output(\"output\")\n",
+    "    span.set_status(Status(StatusCode.OK))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decorators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tracer.agent\n",
+    "def decorated_agent(input: str) -> str:\n",
+    "    return \"output\"\n",
+    "\n",
+    "\n",
+    "decorated_agent(\"input\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Tools"
    ]
   },
