remove get current span

--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -14,11 +14,10 @@
     "from opentelemetry.exporter.otlp.proto.http.trace_exporter import OTLPSpanExporter\n",
     "from opentelemetry.sdk.resources import Resource\n",
     "from opentelemetry.sdk.trace.export import ConsoleSpanExporter, SimpleSpanProcessor\n",
-    "from opentelemetry.trace import Status, StatusCode\n",
+    "from opentelemetry.trace import Status, StatusCode, get_current_span\n",
     "\n",
     "from openinference.instrumentation import (\n",
     "    TracerProvider,\n",
-    "    get_current_span,\n",
     "    get_input_value_and_mime_type,\n",
     "    get_output_value_and_mime_type,\n",
     "    get_span_kind,\n",
@@ -328,8 +327,8 @@
     "@tracer.chain\n",
     "def decorated_chain_with_input_and_output_set_inside_the_wrapped_function(input: str) -> str:\n",
     "    span = get_current_span()\n",
-    "    span.set_input(\"overridden-input\")\n",
-    "    span.set_output(\"overridden-output\")\n",
+    "    span.set_input(\"overridden-input\")  # type: ignore[attr-defined]\n",
+    "    span.set_output(\"overridden-output\")  # type: ignore[attr-defined]\n",
     "    return \"output\"\n",
     "\n",
     "\n",
@@ -577,9 +576,9 @@
     "def tool_with_changes_inside_the_wrapped_function(input1: str, input2: int) -> str:\n",
     "    span = get_current_span()\n",
     "    print(type(span))\n",
-    "    span.set_input(\"inside-input\")\n",
-    "    span.set_output(\"inside-output\")\n",
-    "    span.set_tool(\n",
+    "    span.set_input(\"inside-input\")  # type: ignore[attr-defined]\n",
+    "    span.set_output(\"inside-output\")  # type: ignore[attr-defined]\n",
+    "    span.set_tool(  # type: ignore[attr-defined]\n",
     "        name=\"inside-tool-name\",\n",
     "        description=\"inside-tool-description\",\n",
     "        parameters={\"inside-input\": \"inside-input\"},\n",
