rename helper functions

--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -18,9 +18,9 @@
     "\n",
     "from openinference.instrumentation import (\n",
     "    TracerProvider,\n",
-    "    get_input_value_and_mime_type,\n",
-    "    get_output_value_and_mime_type,\n",
-    "    get_span_kind,\n",
+    "    get_input_attributes,\n",
+    "    get_output_attributes,\n",
+    "    get_span_kind_attributes,\n",
     "    get_tool_attributes,\n",
     "    suppress_tracing,\n",
     "    using_attributes,\n",
@@ -100,11 +100,11 @@
     "with tracer.start_as_current_span(\n",
     "    \"chain-span-with-attribute-getters\",\n",
     "    attributes={\n",
-    "        **get_span_kind(\"chain\"),\n",
-    "        **get_input_value_and_mime_type(\"input\"),\n",
+    "        **get_span_kind_attributes(\"chain\"),\n",
+    "        **get_input_attributes(\"input\"),\n",
     "    },\n",
     ") as span:\n",
-    "    span.set_attributes(get_output_value_and_mime_type(\"output\"))\n",
+    "    span.set_attributes(get_output_attributes(\"output\"))\n",
     "    span.set_status(Status(StatusCode.OK))"
    ]
   },
@@ -269,7 +269,7 @@
     "    with tracer.start_as_current_span(\n",
     "        \"child-span\",\n",
     "        openinference_span_kind=\"chain\",\n",
-    "        attributes=get_input_value_and_mime_type(\"child-span-input\"),\n",
+    "        attributes=get_input_attributes(\"child-span-input\"),\n",
     "    ) as child_span:\n",
     "        output = \"output\"\n",
     "        child_span.set_output(output)\n",
@@ -291,7 +291,7 @@
     "    with tracer.start_as_current_span(\n",
     "        \"child-span\",\n",
     "        openinference_span_kind=\"chain\",\n",
-    "        attributes=get_input_value_and_mime_type(\"child-span-input\"),\n",
+    "        attributes=get_input_attributes(\"child-span-input\"),\n",
     "    ):\n",
     "        raise ValueError(\"error\")\n",
     "\n",
