--- a/python/openinference-instrumentation/examples/tracer.ipynb
+++ b/python/openinference-instrumentation/examples/tracer.ipynb
@@ -11,21 +11,23 @@
     "from typing import Any, Dict\n",
     "\n",
     "import pydantic\n",
-    "from opentelemetry.exporter.otlp.proto.http.trace_exporter import OTLPSpanExporter\n",
-    "from opentelemetry.sdk.resources import Resource\n",
-    "from opentelemetry.sdk.trace.export import ConsoleSpanExporter, SimpleSpanProcessor\n",
     "from opentelemetry.trace import Status, StatusCode, get_current_span\n",
     "\n",
     "from openinference.instrumentation import (\n",
-    "    TracerProvider,\n",
     "    get_input_attributes,\n",
     "    get_output_attributes,\n",
     "    get_span_kind_attributes,\n",
     "    get_tool_attributes,\n",
     "    suppress_tracing,\n",
     "    using_attributes,\n",
-    ")\n",
-    "from openinference.semconv.resource import ResourceAttributes"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Either instrument with `TracerProvider` from `openinference.instrumentation`."
    ]
   },
   {
@@ -34,12 +36,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from opentelemetry.exporter.otlp.proto.http.trace_exporter import OTLPSpanExporter\n",
+    "from opentelemetry.sdk.resources import Resource\n",
+    "from opentelemetry.sdk.trace.export import ConsoleSpanExporter, SimpleSpanProcessor\n",
+    "\n",
+    "from openinference.instrumentation import TracerProvider\n",
+    "from openinference.semconv.resource import ResourceAttributes\n",
+    "\n",
     "endpoint = \"http://127.0.0.1:6006/v1/traces\"\n",
     "resource = Resource(attributes={ResourceAttributes.PROJECT_NAME: \"openinference-tracer\"})\n",
     "tracer_provider = TracerProvider(resource=resource)\n",
     "tracer_provider.add_span_processor(SimpleSpanProcessor(OTLPSpanExporter(endpoint)))\n",
     "tracer_provider.add_span_processor(SimpleSpanProcessor(ConsoleSpanExporter()))\n",
     "tracer = tracer_provider.get_tracer(__name__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or using `phoenix.otel.register` (in which case, comment out cell above and uncomment this cell)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from phoenix.otel import register\n",
+    "\n",
+    "# tracer_provider = register(protocol=\"http/protobuf\")\n",
+    "# tracer = tracer_provider.get_tracer(__name__)"
    ]
   },
   {
@@ -58,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +620,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -606,9 +634,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
